--- a/assets/style.css
+++ b/assets/style.css
@@ -13,6 +13,10 @@ body {
   font-family: 'Lato', sans-serif;
   line-height: 1.7;
 }
+p {
+  text-align: justify;
+  text-justify: inter-word;
+}
 
 /* Document Container */
 .document {
@@ -95,7 +99,7 @@ a:hover {
 .footer {
   margin-top: 48px;
   font-size: 0.875rem;
-  color: #555;
+  color: #B0B0B0;
 }
 
 /* Responsive */
